--- a/meta-bsp/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
+++ b/meta-bsp/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
@@ -1,32 +1,39 @@
 [core]
 #gbm-format=argb8888
+#gbm-format=rgb565
 idle-time=0
 #use-g2d=1
 #xwayland=true
-#repaint-window=16
+repaint-window=16
 #enable-overlay-view=1
-modules=screen-share.so
+#modules=screen-share.so
+shell=kiosk-shell.so
 
 #[shell]
 #size=1920x1080
 
 [libinput]
 touchscreen_calibrator=true
+enable-tap=true
+tap-and-drag=false
 
-#[output]
-#name=HDMI-A-1
+[output]
+name=HDMI-A-1
+#mode=148.50 1920 2448 2492 2640 1080 1084 1089 1125 +hsync +vsync
+#mode=31.50 800 840 888 928 480 493 496 525 -hsync -vsync
+mode=49.5 800 824 896 992  480 483 493 501 -hsync -vsync
 #mode=1920x1080@60
+#mode=800x480
 #transform=rotate-90
 
 #[output]
 #name=HDMI-A-2
 #mode=off
-#	WIDTHxHEIGHT    Resolution size width and height in pixels
-#	off             Disables the output
-#	preferred       Uses the preferred mode
-#	current         Uses the current crt controller mode
+#       WIDTHxHEIGHT    Resolution size width and height in pixels
+#       off             Disables the output
+#       preferred       Uses the preferred mode
+#       current         Uses the current crt controller mode
 #transform=rotate-90
 
-[screen-share]
-command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
-#start-on-startup=true
+#[screen-share]
+#command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
